--- a/views/account.ejs
+++ b/views/account.ejs
@@ -3,10 +3,10 @@
 <head>
     <title>CarSpotters</title>
     <meta name="theme-color" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" type="image/x-icon" href="/assets/CARSPOTTERIMGLOGO.png">
     <link rel="stylesheet" type="text/css" href="/stylesheet/mobile.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheet/pc.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/account.css">
     <script src="https://kit.fontawesome.com/a74a21bfbd.js" crossorigin="anonymous"></script>
 </head>
 
@@ -69,7 +69,7 @@
                             </label>
                         </button>
                         <% } %>
-                        <br><div id = "followerCount"><%=user.followers.length%></div>
+                        <br><div id = "followerCount" style="font-size: 0.75em;"><%=user.followers.length%></div>
                     </p>
                     
                 </div>
