--- a/views/account.ejs
+++ b/views/account.ejs
@@ -69,7 +69,7 @@
                             </label>
                         </button>
                         <% } %>
-                        <br><div id = "followerCount" style="font-size: 0.75em;"><%=user.followers.length%></div>
+                        <br><div id = "followerCount"><p><%=user.followers.length%></p></div>
                     </p>
                     
                 </div>
