--- a/views/create.ejs
+++ b/views/create.ejs
@@ -14,7 +14,11 @@
 <body style="overflow-y: hidden;">
 <div class = "navbar">
     <div class = "web-logo">
-        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+        <% if (theme == "dark") { %>
+            <img src = "/assets/LogoWHITE.png" alt = "CarSpotters">
+        <% } else { %>
+            <img src = "/assets/LogoBLACK.png" alt = "CarSpotters">
+        <% } %>
     </div>
     <div class="search-container">
     </div>
