--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div class="login-wrapper">
-        <img src="assets/CARSPOTTERIMG.png">
+        <img src="assets/LogoBLACK.png">
         <form action="/login" method="POST">
             <h1 class="login-header">Login</h1>
             <div class = "login-error">
