--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <div class = "login-wrapper">
-        <img src = "assets/CARSPOTTERIMG.png">
+        <img src = "assets/LogoBLACK.png">
         <form action="/register" method="POST">
             <h1 class = "login-header">Welcome!</h1>
             <div class = "login-error">
