--- a/src/stylesheet/account.css
+++ b/src/stylesheet/account.css
@@ -21,6 +21,11 @@
 
 .main-container .account-container .account-details h3{
     margin-top:0.5em;
+    color: var(--text-title);
+}
+
+.main-container .account-container .account-details p{
+    color: var(--text-subtitle);
 }
 
 .main-container .account-container .account-details .profile-picture-container {
@@ -222,7 +227,12 @@
     outline: 1px solid var(--border-standard);
     border-radius: 1em;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    overflow: auto;
+}
+
+.main-container .settings-container::-webkit-scrollbar {
+    display:none;
 }
 
 .main-container .preview-container button{
@@ -231,43 +241,88 @@
     height: 100%;
 }
 
-.main-container .settings-container .settings-title {
-    position: absolute;
-    left: 50%;
-    margin-top: 1em;
-    transform: translateX(-50%);
-}
-
 .main-container .settings-container .settings {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display:flex;
     flex-direction: column;
-    width:45%;
-    margin-left: 0.5%;
+    width: 100%;
 }
 
 .main-container .settings-container .settings .settings-option {
-    padding:1em;
-    min-height: 6em;
+    padding:0.5em;
     width: 100%;
     border-bottom: 1px solid var(--border-standard);
+    color: var(--text-title);
+}
+
+.main-container .settings-container .settings .settings-option h3{
+    margin-bottom: 0.25em;
+}
+
+.main-container .settings-container .settings .settings-option select{
+    width: 25%;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    border: 1px solid var(--border-standard);
+    background-color: var(--standard-background);
+    color: var(--text-title);
+}
+
+.main-container .settings-container .settings .settings-option button {
+    background-color: var(--standard-secondary-background);
+    border: 1px solid var(--border-standard);
+    padding: 0.5em;
+    border-radius: 0.5em;
+}
+
+.main-container .settings-container .settings .settings-option button:hover{
+    background-color: var(--standard-hover-background);
+    transform: scale(1.1);
+    box-shadow: 1px 1px 5px 0 var(--highlighted-hover-background);
 }
 
 .main-container .settings-container .settings .settings-option:last-child {
     border-bottom: none;
 }
 
-.main-container .settings-container .settings-back-button button{
-   border: none;
-   background-color: transparent;
-   margin: 1em -1.5em;
-   position: absolute;
+.main-container .settings-container .settings-title {
+    color: var(--text-title);
+}
+
+.main-container .settings-container .settings-header {
+    width: 100%;
+    height: 5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-container .settings-container .settings-back-button button {
+    border: none;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    margin: 1em;
+}
+
+.main-container .settings-container .settings-back-button button .fa-solid {
+    font-size: 2em;
 }
 
 .main-container .settings-container .settings-back-button button:hover {
     animation: arrow-left 2.5s infinite;
 }
+
+.main-container .settings-container .settings input {
+    color: var(--text-title);
+    width: 25%;
+}
+
+.main-container .settings-container .settings input[type="password"]::-ms-reveal {
+    filter: invert(100%);
+}
+
+
+
 
 @media screen and (max-width: 786px) {
     .main-container .account-container {
