--- a/src/stylesheet/colour.css
+++ b/src/stylesheet/colour.css
@@ -1,27 +1,18 @@
-[data-theme = "light"] {
-    --backgroundColour: rgb(235, 235, 235);
-    --textColour: rgb(118, 118, 118);
-    --navbarColour: rgb(255, 255, 255);
-    --outline: rgb(203, 203, 203);
-    --sidenavBackground: rgb(255, 255, 255);
-    --sidenavHover: rgb(248, 240, 255);
-    --sidenavSelected: rgba(220, 220, 220, 0.381);
-    --textboxbackground: rgb(230, 230, 230);
-    --loginHover: rgb(234, 211, 255);
-    --postBackground: rgb(246, 246, 246);
-}
-
 [data-theme = "dark"] {
-    --backgroundColour: rgb(34, 34, 34);
-    --textColour: rgb(229, 229, 229);
-    --navbarColour: rgb(51, 51, 51);
-    --outline: rgb(51, 51, 51);
-    --sidenavBackground: rgb(51, 51, 51);
-    --sidenavHover: rgb(116, 112, 120);
-    --sidenavSelected: rgba(255, 255, 255, 0.381);
-    --textboxbackground: rgb(51, 51, 51);
-    --loginHover: rgb(234, 211, 255);
-    --postBackground: rgb(51, 51, 51);
+    --border-standard: rgb(94, 94, 94);
+    --text-title: rgb(255, 255, 255);
+    --text-subtitle: rgb(177, 177, 177);
+    --text-paragraph: rgb(87, 87, 87);
+    --text-body: rgb(255, 255, 255);
+    
+    /* backgrounds */
+    --standard-background: rgb(19, 19, 19);
+    --standard-secondary-background: rgb(10, 10, 10);
+    --standard-tertiary-background: rgb(39, 39, 39);
+    --standard-hover-background: rgb(0, 0, 0);
+    --standard-selected-background: rgb(41, 41, 41);
+    --highlighted-hover-background: rgb(66, 44, 80);
+    --post-back: rgb(56, 56, 56);
 }
 
 /* new */
@@ -35,8 +26,9 @@
     /* backgrounds */
     --standard-background: rgb(255, 255, 255);
     --standard-secondary-background: rgb(235, 235, 235);
-    --standard-tertiary-background: rgb(221, 221, 221);
+    --standard-tertiary-background: rgb(247, 247, 247);
     --standard-hover-background: rgb(248, 240, 255);
-    --standard-selected-background: rgb(202, 202, 202);
-    --highlighted-hover-background: rgb(234, 211, 255);
+    --standard-selected-background: rgb(239, 239, 239);
+    --highlighted-hover-background: rgb(246, 224, 255);
+    --post-back: rgb(255, 255, 255);
 }
