--- a/src/stylesheet/loginStyle.css
+++ b/src/stylesheet/loginStyle.css
@@ -1,3 +1,6 @@
+@import "colour.css";
+@import "default-text-sizing.css";
+
 .login-wrapper{
     position: absolute;
     top: 50%;
@@ -9,7 +12,7 @@
     height: 40em;
     width: 30%;
     border-radius: 10px;
-    outline: 1px solid var(--outline);
+    outline: 1px solid var(--border-standard);
 }
 
 .login-wrapper img {
@@ -22,7 +25,7 @@
 .login-wrapper input[type="username"]::placeholder,
 .login-wrapper input[type="email"]::placeholder,
 .login-wrapper input[type="password"]::placeholder {
-    color: var(--textColourLight);
+    color: var(--text-paragraph);
 }
 
 .login-wrapper input[type="username"],
@@ -33,7 +36,7 @@
     outline: 0;
     width: 100%;
     padding: 1.5em;
-    background-color: var(--textboxbackground);
+    border: 1px solid var(--border-standard);
     border-radius: .5em;
     margin: 1em 0;
     box-sizing: border-box; 
@@ -57,7 +60,7 @@
     margin-top: 2em;
     padding-bottom: .5em;
     font-size: 2em;
-    color: var(--textColour);
+    color: var(--text-title);
 }
 
 .login-wrapper a {
@@ -77,7 +80,7 @@
 }
 
 .login-wrapper a:hover {
-    color: rgb(104, 14, 189);
+    color: var(--border-standard);
 }
 
 .login-wrapper input[type="username"]{
@@ -93,17 +96,18 @@
 }
 
 .login-wrapper button[type="submit"]{
+    background-color: var(--standard-secondary-background);
     animation: smoothDrop 1.5s;
 }
 
 .login-wrapper input[type="username"]:focus,
 .login-wrapper input[type="password"]:focus,
 .login-wrapper input[type="email"]:focus{
-    box-shadow: 0 5px 5px 0 var(--loginHover);
+    box-shadow: 0 5px 5px 0 var(--highlighted-hover-background);
 }
 
 .login-wrapper button:hover {
-    box-shadow: 0 5px 5px 0 var(--loginHover);
+    box-shadow: 0 5px 5px 0 var(--highlighted-hover-background);
 }
 
 .login-wrapper .login-error {
