--- a/src/stylesheet/messages.css
+++ b/src/stylesheet/messages.css
@@ -35,7 +35,7 @@
 }
 
 .main-container .create-message-container .create-message textarea:focus {
-    border: 1px solid var(--outline);
+    border: 1px solid var(--border-standard);
     outline: none;
 }
 
@@ -50,12 +50,14 @@
     font-size: 1em;
     background-color: transparent;
     border:none;
-    border-bottom: 2px solid var(--outline);
+    border-radius: 0;
+    border-bottom: 2px solid var(--border-standard);
+    color: var(--text-title);
 }
 
 .main-container .create-message-container .create-message .user-search input:focus {
     border:none;
-    border-bottom: 2px solid var(--outline);
+    border-bottom: 2px solid var(--border-standard);
     outline: none;
 }
 
@@ -64,13 +66,16 @@
     width:25%;
     margin-top: 0.5em;
     position: absolute;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-container .create-message-container .create-message .user-dropdown .user {
     height:3em;
     width:100%;
-    background-color: var(--postBackground);
-    border: 1px solid var(--outline);
+    color: var(--text-title);
+    background-color: var(--standard-background);
+    border: 1px solid var(--border-standard);
     position: relative;
     display:flex;
     flex-direction: row;
@@ -78,7 +83,7 @@
 }
 
 .main-container .create-message-container .create-message .user-dropdown .user:hover {
-    background-color: var(--sidenavHover);
+    background-color: var(--standard-secondary-background);
 }
 
 .main-container .create-message-container .create-message .user-dropdown p {
@@ -116,12 +121,12 @@
     padding: 1em 2em;
     border-radius: 1em;
     margin: 1em;
-    background-color: var(--sidenavBackground);
-    outline: 1px solid var(--outline);
+    background-color: var(--standard-background);
+    outline: 1px solid var(--border-standard);
 }
 
 .main-container .create-message-container .create-message  .create-message-buttons button:hover {
-    box-shadow: 0 5px 5px 0 var(--loginHover);
+    box-shadow: 0 5px 5px 0 var(--highlighted-hover-background);
     transform: scale(1.1);
 }
 
@@ -172,6 +177,10 @@
     margin-left: 0.5em;
 }
 
+.main-container .message-container .message-header .create-new i {
+    color: var(--text-title);
+}
+
 .main-container .message-container .message-dropdown-container {
     width: 100%;
     height: 70%;
@@ -217,6 +226,7 @@
    display: flex;
    flex-direction: row;
    height:fit-content;
+   color: var(--text-title);
 }
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .image-container {
@@ -242,7 +252,7 @@
     align-items: center;
     margin-left: 0.5em;
     font-size: 0.9em;
-    color: var(--text-paragraph);
+    color: var(--text-title);
 }
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user .message-date {
@@ -255,7 +265,7 @@
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .recent-message {
     padding: 0.5em;
     padding-left: 1.5em;
-    color: var(--textColour);
+    color: var(--text-paragraph);
     font-size: 0.8em;
     text-align: left;
 }
@@ -338,6 +348,7 @@
     height: 2.5em;
     margin: 0.5rem;
     margin-bottom: .5rem;
+    color: var(--text-paragraph);
 }
 
 .main-container .message-container .message-content-container .message-content .message-profile {
