--- a/src/stylesheet/post.css
+++ b/src/stylesheet/post.css
@@ -14,7 +14,6 @@
 }
 
 .main-container #post-container .post {
-    max-height: 32.5em;
     border-bottom: 2px solid var(--border-standard);
 }
 
@@ -23,6 +22,8 @@
     height: fit-content;
     align-items: center;
     height: 3rem;
+    margin-bottom: 0.25rem;
+    margin-left: 1%;
 }
 
 .main-container #post-container .post .post-header .profile-picture {
@@ -56,6 +57,7 @@
 }
 
 .main-container #post-container .post .post-header .post-header-content .profile-name {
+    font-size: 1.5em;
     color: var(--text-title);
 }
 
@@ -84,7 +86,7 @@
 }
 
 .main-container #post-container .post .image-container {
-    margin: 0.5rem 0.5rem 0rem 0.5rem;
+    margin: 0rem 0.5rem 0rem 0.5rem;
     max-height: 25em;
     border-radius: 1em;
     border: 2px solid var(--border-standard);
@@ -97,10 +99,7 @@
 .main-container #post-container .post .image-container img {
     width: 100%;
     height: 100%;
-}
-
-.main-container #post-container .post i {
-    color: var(--text-subtitle);
+    background-color: var(--post-back);
 }
 
 .main-container #post-container .post .extras-content {
@@ -157,7 +156,7 @@
     width: 75%;
     height: 7.5em;
     border: 2px solid var(--border-standard);
-    background-color: var(--standard-secondary-background);
+    background-color: var(--standard-background);
     border-radius: 1em;
     margin: 1em;
     color: var(--textColour);
@@ -264,7 +263,7 @@
 
 .main-container .comment-container .comments .comment .comment-extras {
     margin-top: 0.5em;
-    border-top: 1px solid var(--outline);
+    border-top: 1px solid var(--border-standard);
     display: flex;
     flex-direction: row;
     margin-right: 0.5em;
@@ -302,19 +301,22 @@
     margin-top: 1em;
     border: none;
     padding: 1em 2em 1em 2em;
-    border: 1px solid var(--outline);
+    border: 1px solid var(--border-standard);
     border-radius: 1em;
     margin-bottom: 1em;
     color: var(--text-title);
 }
 
 .main-container .comment-container .login-button:hover {
-    box-shadow: 0 5px 5px 0 var(--loginHover);
+    box-shadow: 0 5px 5px 0 var(--highlighted-hover-background);
     transform: scale(1.05);
 }
 
 .main-container .comment-container .comment-list {
     margin-top: 1em;
     display: flex;
-    justify-content: center
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
