--- a/views/map.ejs
+++ b/views/map.ejs
@@ -13,7 +13,11 @@
 
 <div class = "navbar" id="navbar">
     <div class = "web-logo">
-        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+        <% if (theme == "dark") { %>
+            <img src = "/assets/LogoWHITE.png" alt = "CarSpotters">
+        <% } else { %>
+            <img src = "/assets/LogoBLACK.png" alt = "CarSpotters">
+        <% } %>
     </div>
 
     <ul>
