--- a/views/viewAllPosts.ejs
+++ b/views/viewAllPosts.ejs
@@ -13,8 +13,12 @@
 <body>
   <div class = "navbar" id="navbar">
     <div class = "web-logo">
-        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
-    </div>
+      <% if (theme == "dark") { %>
+          <img src = "/assets/LogoWHITE.png" alt = "CarSpotters">
+      <% } else { %>
+          <img src = "/assets/LogoBLACK.png" alt = "CarSpotters">
+      <% } %>
+  </div>
     <ul>
       <div class = "dropdown">
         <button class = "dropbtn">
@@ -100,6 +104,16 @@
                     </label>
                   </button>
                   </div>
+                <div class = "item">
+                  <form action = "/viewPost/<%=post._id%>" method = "GET">
+                    <button>
+                      <label for = "comment-button">
+                        <i class="fas fa-comment"></i>
+                        <p class = "commentCount"><%=post.comments.length%></p>
+                      </label>
+                    </button>
+                  </form>
+                </div>
               </div>
           </div>
         <% }) %>
